# chess-mistake-tracker

./: .env.example  .gitignore  CODE_REVIEW.md  DESIGN.md  HOWTO.md  IMPLEMENTATION.md  Makefile  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json.tmp.636503.0a503226d010
alembic/: env.py
alembic/versions/: 95d9c707ca53_initial_schema.py  d3cd423cdc8d_add_app_settings_singleton.py
backend/app/: config.py  db.py  main.py
backend/app/analyzers/: base.py  lichess_cloud.py  lichess_pgn.py  stockfish_local.py
backend/app/api/: analysis.py  dates.py  deps.py  games.py  mistakes.py  settings.py  stats.py
backend/app/chess_utils/: phase.py  see.py  time_control.py  winrate.py
backend/app/models/: __init__.py  app_settings.py  game.py  mistake.py  position.py  user.py
backend/app/schemas/: analysis.py  games.py  mistakes.py  settings.py  stats.py
backend/tests/: conftest.py  test_analysis_service.py  test_api_analysis.py  test_api_games.py  test_api_mistakes.py  test_api_settings.py  test_api_stats.py  test_chesscom_parse.py  test_health.py  test_heuristics.py  test_ingestion.py  test_lichess_online_parse.py  test_lichess_pgn_analyzer.py  test_lichess_study_parse.py  test_mistake_detection.py  test_phase.py  test_see.py  test_source_registry.py  test_stockfish_local.py  test_time_control.py  test_winrate.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: games.ts  (+5 more)
scripts/: backfill_best_move.py  retune_suppression.py  seed.py
(+31 files in other folders)
