[project]
name = "chess-mistake-tracker"
version = "0.1.0"
description = "Personal chess analysis tool that classifies recurring mistake patterns from Lichess games."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "python-chess>=1.999",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
